HIL/src/objects/Financial_Plan__c.object
<CustomObject>
    <description>Custom object to track data related to a financial plan and related data.</description>
    <fields>
        <fullName>Business_Planning_Discussed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Planning Discussed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Planning_Last_Discussed__c</fullName>
        <label>Business Planning Last Discussed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Business_Planning_Notes__c</fullName>
        <label>Business Planning Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Client_Prospect_ID__c</fullName>
        <formula>Client_Prospect__r.Id</formula>
        <label>Client/Prospect ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Prospect__c</fullName>
        <label>Client/Prospect</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Financial Plans</relationshipLabel>
        <relationshipName>Financial_Plans</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Date_Presented__c</fullName>
        <label>Date Presented</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Started__c</fullName>
        <label>Date Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Education_Planning_Discussed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Education Planning Discussed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Education_Planning_Last_Discussed__c</fullName>
        <label>Education Planning Last Discussed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Education_Planning_Notes__c</fullName>
        <label>Education Planning Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Estate_Planning_Discussed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Estate Planning Discussed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estate_Planning_Last_Discussed__c</fullName>
        <label>Estate Planning Last Discussed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estate_Planning_Notes__c</fullName>
        <label>Estate Planning Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Insurance_Risk_Discussed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insurance/Risk Discussed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Insurance_Risk_Last_Discussed__c</fullName>
        <label>Insurance/Risk Last Discussed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Risk_Notes__c</fullName>
        <label>Insurance/Risk Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lifestyle__c</fullName>
        <label>Lifestyle</label>
        <picklist>
            <picklistValues>
                <fullName>Better</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Same</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adjusted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Relationship_Group_ID__c</fullName>
        <formula>Relationship_Group__r.Id</formula>
        <label>Relationship Group ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Relationship Group</label>
        <referenceTo>Relationship_Group__c</referenceTo>
        <relationshipLabel>Financial Plans</relationshipLabel>
        <relationshipName>Financial_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retirement_Age__c</fullName>
        <label>Retirement Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Retirement_Date__c</fullName>
        <label>Retirement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retirement_Discussed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Retirement Discussed?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retirement_Last_Discussed__c</fullName>
        <label>Retirement Last Discussed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retirement_Notes__c</fullName>
        <label>Retirement Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Spending_Goal__c</fullName>
        <inlineHelpText>Enter a monthly spending goal for your retiree.</inlineHelpText>
        <label>Spending Goal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Financial Plan</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Financial Plan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Plans</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>